# internal/models/album.go
@@ -1,0 +1,7 @@
+package models
+
+type Album struct {
+	ID       int    `json:"id"`
+	Title    string `json:"title"`
+	ArtistID int    `json:"artist_id"`
+}
